# Sorting-Bible

./: CMakeLists.txt  EffectiveSorts  EffectiveSorts.md  Introduction.md  README.md  SimpleSorts.md
src/: HeapSort.h  InsertionSort.h  MergeSort.h  QuickSort.h  SelectionSort.h
tests/: CMakeLists.txt  CTestTestfile.cmake  GenRandNums.py  HeapSort_test.cc  InsertionSort_test.cc  MergeSort_test.cc  QuickSort_test.cc  SelectionSort_test.cc  TestFramework.cc  sort_file.txt
